# hystric

train/: .gitignore  Dockerfile  README.md  pyproject.toml
train/hystric/: demo_acoustic_model.py  evaluate.py  load.py  model.py  preprocessing.py  simple_test_train.py  test_acoustic_model.py  train.py
train/hystric.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
train/hystric/load/: cmu_dictionary.py  common.py  common_voice.py  librispeech.py
train/tests/: train_test.py
