[tool.poetry]
name = "hystric"
version = "0.1.0"
description = ""
authors = ["Cameron Martin <cameronmartin123@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
tensorflow = "^2.2.0"
kapre = "^0.3.4"
tensorflow_datasets = "^4.1.0"
pydub = "^0.24.1"
tensorboard_plugin_profile = "^2.4.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[tool.poetry.scripts]
train = "hystric.train:train"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

