[tool.poetry]
name = "hystric"
version = "0.1.0"
description = ""
authors = ["Cameron Martin <cameronmartin123@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6, <3.9"
tensorflow = "^2.2.0"
kapre = "^0.3.4"
pydub = "^0.24.1"
tensorboard_plugin_profile = "^2.4.0"
apache_beam = "^2.26.0"
tfds-nightly = "^4.1.0-alpha.202101050107"
pyaudio = "^0.2.11"
tensorflow_io = "^0.17.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[tool.poetry.scripts]
train = "hystric.train:train"
evaluate = "hystric.evaluate:evaluate"
demo_acoustic_model = "hystric.demo_acoustic_model:demo"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

